# mvtnorm

branches/mvtnorm-devel/: .Rbuildignore  CHANGES  DESCRIPTION  NAMESPACE
branches/mvtnorm-devel/R/: mvt.R
branches/mvtnorm-devel/man/: algorithms.Rd  mvtnorm-internal.Rd  pmvnorm.Rd  pmvt.Rd  qmvnorm.Rd  qmvt.Rd
branches/mvtnorm-devel/src/: miwa.c
branches/mvtnorm-devel/tests/: bugfix-tests.R
pkg/: .Rbuildignore  DESCRIPTION  NAMESPACE  configure  configure.ac
pkg/R/: mvnorm.R  mvt.R  tvpack.R
pkg/inst/: CHANGES  NEWS
pkg/inst/C_API_Example/src/: test.c
pkg/inst/C_API_Example/tests/: test.R
pkg/inst/article/: bibmiwa.bib  litdb.bib  mvtnorm_miwa.Rnw
pkg/inst/include/: mvtnorm.h  mvtnormAPI.h
pkg/man/: Mvnorm.Rd  Mvt.Rd  algorithms.Rd  pmvt.Rd  qmvnorm.Rd  qmvt.Rd
pkg/src/: C_FORTRAN_interface.c  Makevars.in  mvt.f  mvtnorm-init.c  randomF77.c  tvpack.f
pkg/tests/: bugfix-tests.R  bugfix-tests.Rout.save  regtest-TVPACK.R  regtest-TVPACK.Rout.save  test-noisy-root.R
trunk/mvtnorm/: .Rbuildignore  CHANGES  DESCRIPTION  NAMESPACE
trunk/mvtnorm/R/: mvnorm.R  mvt.R
trunk/mvtnorm/inst/article/: MVT_Rnews.tex  cats.R  (+2 more)
trunk/mvtnorm/man/: Mvnorm.Rd  pmvt.Rd
trunk/mvtnorm/src/: mvt.f
trunk/mvtnorm/tests/: bugfix-tests.R  rmvnorm.R
trunk/mvtnorm/trunk/: .Rbuildignore  CHANGES  DESCRIPTION  INDEX
www/: index.html
www/authors/: index.html
www/css/: main.css
www/news/: index.html
www/outreach/: index.html
www/publications/: index.html
www_src/: 04_publications.Rmd  _config.yml  authors.yml  config.R  mvtnorm.bib  setup.R  site.css
(+105 files in other folders)
